syntax="proto3";

message CorrectMessage3 {
  string type = 1;
  string some_field = 2;
}